MC-Fix spacing section login

--- a/styles/layout/_layout.scss
+++ b/styles/layout/_layout.scss
@@ -15,12 +15,4 @@
     background-color: $brownDark;
   }
 
-  .login{
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .login__button{
-    display: none;
-  }
 }
